--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ posts = "/posts/:year/:month/:day/:slug/"
   url = "image/zj.png"
   width = 50.0
   height = 50.0
-  alt = "张晶：Kristen-JZ"
+  alt = "Kristen-JZ"
 
 [params.lang]
 
