--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ posts = "/posts/:year/:month/:day/:slug/"
     url = "/"
     weight = 1
 [[menu.en]]
-    name = "About"
+    name = "Vitae"
     url = "/en/about/"
     weight = 2
 [[menu.en]]
@@ -53,7 +53,7 @@ posts = "/posts/:year/:month/:day/:slug/"
     # Edit by yourself:
     GithubEdit = "https://github.com/KristenJZ/KristenJZ.github.io/edit/master/content/"
     copyright = "&copy;"
-    copyrightYear = "2020-2021"
+    copyrightYear = "2021-2022"
     # Edit by yourself:
     GithubRepo = "https://github.com/KristenJZ/KristenJZ.github.io"
     # Edit by yourself:
