updating site on 2022年 5月17日 星期二 18时24分52秒 CST

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ posts = "/posts/:year/:month/:day/:slug/"
     weight = 1
 [[menu.en]]
     name = "Vitae"
-    url = "/en/about/"
+    url = "/en/vitae/"
     weight = 2
 [[menu.en]]
     name = "Posts"
