--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ posts = "/posts/:year/:month/:day/:slug/"
     weight = 1
 [[menu.en]]
     name = "Vitae"
-    url = "/en/vitae/"
+    url = "/en/about/"
     weight = 2
 [[menu.en]]
     name = "Posts"
