--- a/config.toml
+++ b/config.toml
@@ -20,13 +20,21 @@ posts = "/posts/:year/:month/:day/:slug/"
     url = "/en/about/"
     weight = 2
 [[menu.en]]
+    name = "Publications"
+    url = "/en/publications/"
+    weight = 4 
+[[menu.en]]
+    name = "Notes&Projects"
+    url = "/en/notebooks/"
+    weight = 4 
+[[menu.en]]
     name = "Posts"
     url = "/en/posts/"
-    weight = 3
+    weight = 5
 [[menu.en]]
     name = "中文"
     url = "/cn/posts/"
-    weight = 4
+    weight = 6
 [[menu.cn]]
     name = "关于"
     url = "/cn/about/"
